# QuickExam

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.gitea/workflows/: build.yml
.github/workflows/: main.yml
resource/: config.json
resource/database-migrations/: 001_init.sql  002_question_create_time.sql
resource/swagger-ui/: index.html
src/: AnonExamBackend.cpp  QuickExamBackend.cpp
src/components/: ConfigComponent.h  DatabaseComponent.h  ErrorHandler.h  ServiceComponent.h  SwaggerComponent.h
src/controller/: AnswerContentController.h  AnswerController.h  QuestionContentController.h  QuestionController.h  TagController.h
src/doo/: Answer.h  Basic.h  Migration.h  OperateTime.h  Question.h  Tag.h
src/dto/: Answer.h  AnswerContent.h  Configuration.h  Question.h  QuestionContent.h  Tag.h
src/dto/basic/: Content.h  Enmus.h  OperateTime.h  Page.h  Response.h
src/dto/db/: Answer.h  Candidate.h  Question.h  Quiz.h  Tag.h
src/dto/response/: Answer.h  AnswerContent.h  Question.h  QuestionContent.h  Response.h  Tag.h
src/dtos/basic/: Content.h  Enmus.h
src/dtos/db/: Answer.h  Question.h
src/service/: AnswerService.cpp  AnswerService.h  BasicService.cpp  BasicService.h  QuestionService.cpp  QuestionService.h  TagService.cpp  TagService.h
src/utils/: Database.h  FileOperate.cpp  FileOperate.h  Logger.cpp  Logger.h  String.cpp  String.h
tools/scripts/: InstallDep.sh
